// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Currency component should have default value for "platform=web" 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#dddddd",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "minHeight": 42,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#4263eb",
        "borderBottomLeftRadius": 6,
        "borderTopLeftRadius": 6,
        "display": "flex",
        "justifyContent": "center",
        "minHeight": 42,
        "paddingBottom": 8,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 8,
        "width": 48,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "fontWeight": "bold",
          "marginVertical": 0.7,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      $
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <TextInput
      accessibilityLabel="undefined_i"
      activeFloatingLabelStyle={{}}
      allowContentSelection={true}
      background={
        <React.Fragment>
          <BackgroundComponent
            style={
              {
                "borderRadius": 6,
              }
            }
          />
        </React.Fragment>
      }
      caretHidden={false}
      contextMenuHidden={false}
      editable={true}
      floatingLabelStyle={{}}
      isInputFocused={false}
      keyboardType="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Enter amount"
      placeholderTextColor="#bbbbbb"
      selection={null}
      style={
        [
          [
            {
              "borderColor": "transparent",
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": 1,
              "minHeight": 42,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            {
              "fontFamily": "Roboto",
              "fontSize": 16,
              "userSelect": "text",
            },
            {},
            {},
          ],
          {},
        ]
      }
      testID="undefined_i"
      value="sample text"
    />
  </View>
</View>
`;

exports[`Test Currency component should have default value for native platform 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#dddddd",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "minHeight": 42,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#4263eb",
        "borderBottomLeftRadius": 6,
        "borderTopLeftRadius": 6,
        "display": "flex",
        "justifyContent": "center",
        "minHeight": 42,
        "paddingBottom": 8,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 8,
        "width": 48,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "fontWeight": "bold",
          "marginVertical": 0.7,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      $
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <TextInput
      accessibilityValue={
        {
          "max": null,
          "min": null,
        }
      }
      accessible={true}
      activeFloatingLabelStyle={{}}
      allowContentSelection={true}
      background={
        <React.Fragment>
          <BackgroundComponent
            style={
              {
                "borderRadius": 6,
              }
            }
          />
        </React.Fragment>
      }
      caretHidden={false}
      contextMenuHidden={false}
      defaultValue="sample text"
      editable={true}
      floatingLabelStyle={{}}
      isInputFocused={false}
      keyboardType="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder="Enter amount"
      placeholderTextColor="#bbbbbb"
      selection={null}
      style={
        [
          [
            {
              "borderColor": "transparent",
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": 1,
              "minHeight": 42,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            {
              "fontFamily": "Roboto",
              "fontSize": 16,
              "userSelect": "text",
            },
            {},
            {},
          ],
          {},
        ]
      }
      testID="undefined_i"
    />
  </View>
</View>
`;

exports[`Test Currency component should render correctly with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#dddddd",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexDirection": "row",
      "minHeight": 48,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#4263eb",
        "borderBottomLeftRadius": 6,
        "borderTopLeftRadius": 6,
        "display": "flex",
        "justifyContent": "center",
        "minHeight": 42,
        "paddingBottom": 8,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 8,
        "width": 48,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "fontWeight": "bold",
          "marginVertical": 0.7,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      $
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        {
          "color": "#bbbbbb",
          "fontSize": 14,
          "left": 16,
          "position": "absolute",
          "textAlign": "left",
          "top": 12,
          "transform": [
            {
              "translateY": 0,
            },
            {
              "translateX": 0,
            },
            {
              "scale": 1,
            },
          ],
          "width": 160,
          "zIndex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        style={
          {
            "color": "#bbbbbb",
            "fontFamily": undefined,
            "fontSize": 14,
            "fontStyle": undefined,
            "fontVariant": undefined,
            "fontWeight": undefined,
            "includeFontPadding": undefined,
            "letterSpacing": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textAlignVertical": undefined,
            "textDecorationColor": undefined,
            "textDecorationStyle": undefined,
            "textShadowColor": undefined,
            "textShadowOffset": undefined,
            "textShadowRadius": undefined,
            "textTransform": undefined,
            "userSelect": undefined,
            "verticalAlign": undefined,
            "writingDirection": undefined,
          }
        }
      >
        Amount
      </Text>
    </View>
    <TextInput
      accessibilityValue={
        {
          "max": null,
          "min": null,
        }
      }
      accessible={true}
      activeFloatingLabelStyle={
        {
          "color": "#4263eb",
        }
      }
      allowContentSelection={true}
      background={
        <React.Fragment>
          <BackgroundComponent
            style={
              {
                "borderRadius": 6,
              }
            }
          />
        </React.Fragment>
      }
      caretHidden={false}
      contextMenuHidden={false}
      defaultValue=""
      editable={true}
      floatingLabel="Amount"
      floatingLabelStyle={
        {
          "color": "#bbbbbb",
          "fontSize": 14,
          "left": 16,
          "position": "absolute",
          "textAlign": "left",
          "top": 12,
        }
      }
      isInputFocused={false}
      keyboardType="numeric"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onSelectionChange={[Function]}
      placeholder=""
      placeholderTextColor="#bbbbbb"
      selection={null}
      style={
        [
          [
            {
              "borderColor": "transparent",
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": 1,
              "minHeight": 42,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            {
              "fontFamily": "Roboto",
              "fontSize": 16,
              "userSelect": "text",
            },
            {},
            {},
          ],
          {},
        ]
      }
      testID="undefined_i"
    />
  </View>
</View>
`;
